--- a/user_guides/primitives_pipelines/primitives/DenseSeq2Seq.html
+++ b/user_guides/primitives_pipelines/primitives/DenseSeq2Seq.html
@@ -432,10 +432,10 @@ In [4]: primitive = load_primitive('keras.Sequential.DenseSeq2Seq',
 In [5]: primitive.fit()
 Epoch 1/5
 
-1/1 [==============================] - 0s 228ms/step - loss: 1.1719 - mse: 1.1719
+1/1 [==============================] - 0s 197ms/step - loss: 1.1719 - mse: 1.1719
 Epoch 2/5
 
-1/1 [==============================] - 0s 2ms/step - loss: 1.2683 - mse: 1.2683
+1/1 [==============================] - 0s 1ms/step - loss: 1.2683 - mse: 1.2683
 Epoch 3/5
 
 1/1 [==============================] - 0s 1ms/step - loss: 1.2350 - mse: 1.2350
@@ -444,10 +444,10 @@ Epoch 4/5
 1/1 [==============================] - 0s 1ms/step - loss: 1.1307 - mse: 1.1307
 Epoch 5/5
 
-1/1 [==============================] - 0s 1ms/step - loss: 1.1537 - mse: 1.1537
+1/1 [==============================] - 0s 999us/step - loss: 1.1537 - mse: 1.1537
 
 In [6]: pred = primitive.produce(X=X)
-1/1 [==============================] - 0s 234ms/step
+1/1 [==============================] - 0s 182ms/step
 
 In [7]: pred.mean()
 Out[7]: 0.036859464</pre>
