--- a/user_guides/primitives_pipelines/primitives/DenseSeq2Seq.html
+++ b/user_guides/primitives_pipelines/primitives/DenseSeq2Seq.html
@@ -432,7 +432,7 @@ In [4]: primitive = load_primitive('keras.Sequential.DenseSeq2Seq',
 In [5]: primitive.fit()
 Epoch 1/5
 
-1/1 [==============================] - 0s 223ms/step - loss: 1.1719 - mse: 1.1719
+1/1 [==============================] - 0s 196ms/step - loss: 1.1719 - mse: 1.1719
 Epoch 2/5
 
 1/1 [==============================] - 0s 1ms/step - loss: 1.2683 - mse: 1.2683
@@ -441,13 +441,13 @@ Epoch 3/5
 1/1 [==============================] - 0s 1ms/step - loss: 1.2350 - mse: 1.2350
 Epoch 4/5
 
-1/1 [==============================] - 0s 1ms/step - loss: 1.1307 - mse: 1.1307
+1/1 [==============================] - 0s 964us/step - loss: 1.1307 - mse: 1.1307
 Epoch 5/5
 
-1/1 [==============================] - 0s 1ms/step - loss: 1.1537 - mse: 1.1537
+1/1 [==============================] - 0s 979us/step - loss: 1.1537 - mse: 1.1537
 
 In [6]: pred = primitive.produce(X=X)
-1/1 [==============================] - 0s 230ms/step
+1/1 [==============================] - 0s 176ms/step
 
 In [7]: pred.mean()
 Out[7]: 0.036859464</pre>
