--- a/user_guides/primitives_pipelines/primitives/DenseSeq2Seq.html
+++ b/user_guides/primitives_pipelines/primitives/DenseSeq2Seq.html
@@ -375,49 +375,53 @@
 <td><p><code class="docutils literal notranslate"><span class="pre">int</span></code></p></td>
 <td><p>number of samples per gradient update. Default is 64</p></td>
 </tr>
-<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">input_shape</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">window_size</span></code></p></td>
+<td><p><code class="docutils literal notranslate"><span class="pre">int</span></code></p></td>
+<td><p>integer denoting the size of the window per input sample</p></td>
+</tr>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">input_shape</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">tuple</span></code></p></td>
 <td><p>tuple denoting the shape of an input sample</p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">target_shape</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">target_shape</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">tuple</span></code></p></td>
 <td><p>tuple denoting the shape of an output sample</p></td>
 </tr>
-<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">optimizer</span></code></p></td>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">optimizer</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">str</span></code></p></td>
 <td><p>string (name of optimizer) or optimizer instance. Default is <code class="docutils literal notranslate"><span class="pre">keras.optimizers.Adam</span></code></p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">loss</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">loss</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">str</span></code></p></td>
 <td><p>string (name of the objective function) or an objective function instance. Default is <code class="docutils literal notranslate"><span class="pre">keras.losses.mean_squared_error</span></code></p></td>
 </tr>
-<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">metrics</span></code></p></td>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">metrics</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">list</span></code></p></td>
 <td><p>list of metrics to be evaluated by the model during training and testing. Default is [“mse”]</p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">return_seqeunces</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">return_seqeunces</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">bool</span></code></p></td>
 <td><p>whether to return the last output in the output sequence, or the full sequence. Default is False</p></td>
 </tr>
-<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">layers</span></code></p></td>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">layers</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">list</span></code></p></td>
 <td><p>list of keras layers which are the basic building blocks of a neural network</p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">verbose</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">verbose</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">bool</span></code></p></td>
 <td><p>verbosity mode. Default is False</p></td>
 </tr>
-<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">dropout_1_rate</span></code></p></td>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">dropout_1_rate</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">float</span></code></p></td>
 <td><p>float between 0 and 1. Fraction of the units to drop for the linear transformation of the inputs for the first dense layer. Default: 0.3</p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">dropout_2_rate</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">dropout_2_rate</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">float</span></code></p></td>
 <td><p>float between 0 and 1. Fraction of the units to drop for the linear transformation of the inputs for the second dense layer. Default: 0.3</p></td>
 </tr>
-<tr class="row-odd"><td colspan="3"><p><strong>output</strong></p></td>
+<tr class="row-even"><td colspan="3"><p><strong>output</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">y</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">y</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">numpy.ndarray</span></code></p></td>
 <td><p>predicted values</p></td>
 </tr>
@@ -431,16 +435,16 @@ In [3]: X = np.array([1] * 100).reshape(1, -1, 1)
 
 In [4]: primitive = load_primitive('keras.Sequential.DenseSeq2Seq',
    ...:     arguments={&quot;X&quot;: X, &quot;y&quot;: X, &quot;input_shape&quot;:(100, 1), &quot;target_shape&quot;:(100, 1),
-   ...:                &quot;batch_size&quot;: 1, &quot;validation_split&quot;: 0, &quot;epochs&quot;: 5})
+   ...:                &quot;window_size&quot;: 100, &quot;batch_size&quot;: 1, &quot;validation_split&quot;: 0, &quot;epochs&quot;: 5})
    ...: 
 
 In [5]: primitive.fit()
 Epoch 1/5
 
-1/1 [==============================] - 0s 334ms/step - loss: 1.2869 - mse: 1.2869
+1/1 [==============================] - 0s 286ms/step - loss: 1.2869 - mse: 1.2869
 Epoch 2/5
 
-1/1 [==============================] - 0s 2ms/step - loss: 1.6919 - mse: 1.6919
+1/1 [==============================] - 0s 1ms/step - loss: 1.6919 - mse: 1.6919
 Epoch 3/5
 
 1/1 [==============================] - 0s 1ms/step - loss: 1.1101 - mse: 1.1101
@@ -452,7 +456,7 @@ Epoch 5/5
 1/1 [==============================] - 0s 1ms/step - loss: 1.1240 - mse: 1.1240
 
 In [6]: pred = primitive.produce(X=X)
-1/1 [==============================] - 0s 466ms/step
+1/1 [==============================] - 0s 358ms/step
 
 In [7]: pred.mean()
 Out[7]: 0.012820099</pre>
