--- a/user_guides/primitives_pipelines/primitives/LSTMSeq2Seq.html
+++ b/user_guides/primitives_pipelines/primitives/LSTMSeq2Seq.html
@@ -375,57 +375,61 @@
 <td><p><code class="docutils literal notranslate"><span class="pre">int</span></code></p></td>
 <td><p>number of samples per gradient update. Default is 64</p></td>
 </tr>
-<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">input_shape</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">window_size</span></code></p></td>
+<td><p><code class="docutils literal notranslate"><span class="pre">int</span></code></p></td>
+<td><p>integer denoting the size of the window per input sample</p></td>
+</tr>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">input_shape</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">tuple</span></code></p></td>
 <td><p>tuple denoting the shape of an input sample</p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">target_shape</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">target_shape</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">tuple</span></code></p></td>
 <td><p>tuple denoting the shape of an output sample</p></td>
 </tr>
-<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">optimizer</span></code></p></td>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">optimizer</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">str</span></code></p></td>
 <td><p>string (name of optimizer) or optimizer instance. Default is <code class="docutils literal notranslate"><span class="pre">keras.optimizers.Adam</span></code></p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">loss</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">loss</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">str</span></code></p></td>
 <td><p>string (name of the objective function) or an objective function instance. Default is <code class="docutils literal notranslate"><span class="pre">keras.losses.mean_squared_error</span></code></p></td>
 </tr>
-<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">metrics</span></code></p></td>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">metrics</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">list</span></code></p></td>
 <td><p>list of metrics to be evaluated by the model during training and testing. Default is [“mse”]</p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">return_seqeunces</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">return_seqeunces</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">bool</span></code></p></td>
 <td><p>whether to return the last output in the output sequence, or the full sequence. Default is False</p></td>
 </tr>
-<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">layers</span></code></p></td>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">layers</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">list</span></code></p></td>
 <td><p>list of keras layers which are the basic building blocks of a neural network</p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">verbose</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">verbose</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">bool</span></code></p></td>
 <td><p>verbosity mode. Default is False</p></td>
 </tr>
-<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">lstm_1_unit</span></code></p></td>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">lstm_1_unit</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">int</span></code></p></td>
 <td><p>dimensionality of the output space for the first LSTM layer. Default is 80</p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">dropout_1_rate</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">dropout_1_rate</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">float</span></code></p></td>
 <td><p>float between 0 and 1. Fraction of the units to drop for the linear transformation of the inputs for the first LSTM layer. Default: 0.3</p></td>
 </tr>
-<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">lstm_2_unit</span></code></p></td>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">lstm_2_unit</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">int</span></code></p></td>
 <td><p>dimensionality of the output space for the second LSTM layer. Default is 80</p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">dropout_2_rate</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">dropout_2_rate</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">float</span></code></p></td>
 <td><p>float between 0 and 1. Fraction of the units to drop for the linear transformation of the inputs for the second LSTM layer. Default: 0.3</p></td>
 </tr>
-<tr class="row-odd"><td colspan="3"><p><strong>output</strong></p></td>
+<tr class="row-even"><td colspan="3"><p><strong>output</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">y</span></code></p></td>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">y</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">numpy.ndarray</span></code></p></td>
 <td><p>predicted values</p></td>
 </tr>
@@ -439,28 +443,28 @@ In [3]: X = np.array([1] * 100).reshape(1, -1, 1)
 
 In [4]: primitive = load_primitive('keras.Sequential.LSTMSeq2Seq',
    ...:     arguments={&quot;X&quot;: X, &quot;y&quot;: X, &quot;input_shape&quot;:(100, 1), &quot;target_shape&quot;:(100, 1),
-   ...:                &quot;batch_size&quot;: 1, &quot;validation_split&quot;: 0, &quot;epochs&quot;: 5})
+   ...:                &quot;window_size&quot;: 100, &quot;batch_size&quot;: 1, &quot;validation_split&quot;: 0, &quot;epochs&quot;: 5})
    ...: 
 
 In [5]: primitive.fit()
 Epoch 1/5
 
-1/1 [==============================] - 1s 608ms/step - loss: 0.8663 - mse: 0.8663
+1/1 [==============================] - 1s 527ms/step - loss: 0.8663 - mse: 0.8663
 Epoch 2/5
 
-1/1 [==============================] - 0s 33ms/step - loss: 0.6796 - mse: 0.6796
+1/1 [==============================] - 0s 27ms/step - loss: 0.6796 - mse: 0.6796
 Epoch 3/5
 
-1/1 [==============================] - 0s 31ms/step - loss: 0.4962 - mse: 0.4962
+1/1 [==============================] - 0s 30ms/step - loss: 0.4962 - mse: 0.4962
 Epoch 4/5
 
-1/1 [==============================] - 0s 32ms/step - loss: 0.3174 - mse: 0.3174
+1/1 [==============================] - 0s 27ms/step - loss: 0.3174 - mse: 0.3174
 Epoch 5/5
 
-1/1 [==============================] - 0s 32ms/step - loss: 0.1568 - mse: 0.1568
+1/1 [==============================] - 0s 27ms/step - loss: 0.1568 - mse: 0.1568
 
 In [6]: pred = primitive.produce(X=X)
-1/1 [==============================] - 1s 599ms/step
+1/1 [==============================] - 0s 459ms/step
 
 In [7]: pred.mean()
 Out[7]: 0.8350418</pre>
