--- a/user_guides/primitives_pipelines/primitives/DenseSeq2Seq.html
+++ b/user_guides/primitives_pipelines/primitives/DenseSeq2Seq.html
@@ -311,21 +311,21 @@ In [4]: primitive = load_primitive('keras.Sequential.DenseSeq2Seq',
 
 In [5]: primitive.fit()
 Epoch 1/5
-1/1 [==============================] - ETA: 0s - loss: 1.7097 - mse: 1.70971/1 [==============================] - 0s 362us/step - loss: 1.7097 - mse: 1.7097
+1/1 [==============================] - ETA: 0s - loss: 1.3592 - mse: 1.35921/1 [==============================] - 0s 491us/step - loss: 1.3592 - mse: 1.3592
 Epoch 2/5
-1/1 [==============================] - ETA: 0s - loss: 1.2039 - mse: 1.20391/1 [==============================] - 0s 268us/step - loss: 1.2039 - mse: 1.2039
+1/1 [==============================] - ETA: 0s - loss: 1.0670 - mse: 1.06701/1 [==============================] - 0s 347us/step - loss: 1.0670 - mse: 1.0670
 Epoch 3/5
-1/1 [==============================] - ETA: 0s - loss: 1.6310 - mse: 1.63101/1 [==============================] - 0s 234us/step - loss: 1.6310 - mse: 1.6310
+1/1 [==============================] - ETA: 0s - loss: 1.4606 - mse: 1.46061/1 [==============================] - 0s 1ms/step - loss: 1.4606 - mse: 1.4606
 Epoch 4/5
-1/1 [==============================] - ETA: 0s - loss: 1.0514 - mse: 1.05141/1 [==============================] - 0s 244us/step - loss: 1.0514 - mse: 1.0514
+1/1 [==============================] - ETA: 0s - loss: 1.0657 - mse: 1.06571/1 [==============================] - 0s 411us/step - loss: 1.0657 - mse: 1.0657
 Epoch 5/5
-1/1 [==============================] - ETA: 0s - loss: 0.9945 - mse: 0.99451/1 [==============================] - 0s 237us/step - loss: 0.9945 - mse: 0.9945
+1/1 [==============================] - ETA: 0s - loss: 1.0136 - mse: 1.01361/1 [==============================] - 0s 406us/step - loss: 1.0136 - mse: 1.0136
 
 In [6]: pred = primitive.produce(X=X)
-1/1 [==============================] - ETA: 0s1/1 [==============================] - 0s 166us/step
+1/1 [==============================] - ETA: 0s1/1 [==============================] - 0s 336us/step
 
 In [7]: pred.mean()
-Out[7]: 0.03835130138950574</pre>
+Out[7]: 0.023338353649122064</pre>
 </section>
 
 
