--- a/user_guides/primitives_pipelines/primitives/DenseSeq2Seq.html
+++ b/user_guides/primitives_pipelines/primitives/DenseSeq2Seq.html
@@ -300,7 +300,7 @@
 </table>
 <pre class="literal-block">In [1]: import numpy as np
 
-In [2]: from mlprimitives import load_primitive
+In [2]: from mlstars import load_primitive
 
 In [3]: X = np.array([1] * 100).reshape(1, -1, 1)
 
@@ -311,21 +311,21 @@ In [4]: primitive = load_primitive('keras.Sequential.DenseSeq2Seq',
 
 In [5]: primitive.fit()
 Epoch 1/5
-1/1 [==============================] - ETA: 0s - loss: 1.0743 - mse: 1.07431/1 [==============================] - 0s 442us/step - loss: 1.0743 - mse: 1.0743
+1/1 [==============================] - ETA: 0s - loss: 1.5891 - mse: 1.58911/1 [==============================] - 0s 476us/step - loss: 1.5891 - mse: 1.5891
 Epoch 2/5
-1/1 [==============================] - ETA: 0s - loss: 0.9929 - mse: 0.99291/1 [==============================] - 0s 361us/step - loss: 0.9929 - mse: 0.9929
+1/1 [==============================] - ETA: 0s - loss: 1.0755 - mse: 1.07551/1 [==============================] - 0s 663us/step - loss: 1.0755 - mse: 1.0755
 Epoch 3/5
-1/1 [==============================] - ETA: 0s - loss: 1.0689 - mse: 1.06891/1 [==============================] - 0s 353us/step - loss: 1.0689 - mse: 1.0689
+1/1 [==============================] - ETA: 0s - loss: 1.0981 - mse: 1.09811/1 [==============================] - 0s 578us/step - loss: 1.0981 - mse: 1.0981
 Epoch 4/5
-1/1 [==============================] - ETA: 0s - loss: 1.1427 - mse: 1.14271/1 [==============================] - 0s 324us/step - loss: 1.1427 - mse: 1.1427
+1/1 [==============================] - ETA: 0s - loss: 1.0093 - mse: 1.00931/1 [==============================] - 0s 552us/step - loss: 1.0093 - mse: 1.0093
 Epoch 5/5
-1/1 [==============================] - ETA: 0s - loss: 0.9874 - mse: 0.98741/1 [==============================] - 0s 665us/step - loss: 0.9874 - mse: 0.9874
+1/1 [==============================] - ETA: 0s - loss: 1.0513 - mse: 1.05131/1 [==============================] - 0s 619us/step - loss: 1.0513 - mse: 1.0513
 
 In [6]: pred = primitive.produce(X=X)
-1/1 [==============================] - ETA: 0s1/1 [==============================] - 0s 213us/step
+1/1 [==============================] - ETA: 0s1/1 [==============================] - 0s 252us/step
 
 In [7]: pred.mean()
-Out[7]: 0.04977864252037672</pre>
+Out[7]: 0.015539709825488263</pre>
 </section>
 
 
