--- a/user_guides/primitives_pipelines/primitives/LSTMSeq2Seq.html
+++ b/user_guides/primitives_pipelines/primitives/LSTMSeq2Seq.html
@@ -308,7 +308,7 @@
 </table>
 <pre class="literal-block">In [1]: import numpy as np
 
-In [2]: from mlprimitives import load_primitive
+In [2]: from mlstars import load_primitive
 
 In [3]: X = np.array([1] * 100).reshape(1, -1, 1)
 
@@ -319,21 +319,21 @@ In [4]: primitive = load_primitive('keras.Sequential.LSTMSeq2Seq',
 
 In [5]: primitive.fit()
 Epoch 1/5
-1/1 [==============================] - ETA: 0s - loss: 1.0961 - mse: 1.09611/1 [==============================] - 0s 468us/step - loss: 1.0961 - mse: 1.0961
+1/1 [==============================] - ETA: 0s - loss: 1.0469 - mse: 1.04691/1 [==============================] - 0s 467us/step - loss: 1.0469 - mse: 1.0469
 Epoch 2/5
-1/1 [==============================] - ETA: 0s - loss: 0.8462 - mse: 0.84621/1 [==============================] - 0s 361us/step - loss: 0.8462 - mse: 0.8462
+1/1 [==============================] - ETA: 0s - loss: 0.8425 - mse: 0.84251/1 [==============================] - 0s 430us/step - loss: 0.8425 - mse: 0.8425
 Epoch 3/5
-1/1 [==============================] - ETA: 0s - loss: 0.6247 - mse: 0.62471/1 [==============================] - 0s 403us/step - loss: 0.6247 - mse: 0.6247
+1/1 [==============================] - ETA: 0s - loss: 0.6562 - mse: 0.65621/1 [==============================] - 0s 423us/step - loss: 0.6562 - mse: 0.6562
 Epoch 4/5
-1/1 [==============================] - ETA: 0s - loss: 0.4268 - mse: 0.42681/1 [==============================] - 0s 401us/step - loss: 0.4268 - mse: 0.4268
+1/1 [==============================] - ETA: 0s - loss: 0.4815 - mse: 0.48151/1 [==============================] - 0s 432us/step - loss: 0.4815 - mse: 0.4815
 Epoch 5/5
-1/1 [==============================] - ETA: 0s - loss: 0.2526 - mse: 0.25261/1 [==============================] - 0s 340us/step - loss: 0.2526 - mse: 0.2526
+1/1 [==============================] - ETA: 0s - loss: 0.3177 - mse: 0.31771/1 [==============================] - 0s 421us/step - loss: 0.3177 - mse: 0.3177
 
 In [6]: pred = primitive.produce(X=X)
-1/1 [==============================] - ETA: 0s1/1 [==============================] - 0s 257us/step
+1/1 [==============================] - ETA: 0s1/1 [==============================] - 0s 243us/step
 
 In [7]: pred.mean()
-Out[7]: 0.6816852190917814</pre>
+Out[7]: 0.5971636724433063</pre>
 </section>
 
 
