deploy: d35717927b5caab56af8389506ca23933501d4d1

--- a/user_guides/primitives_pipelines/primitives/DenseSeq2Seq.html
+++ b/user_guides/primitives_pipelines/primitives/DenseSeq2Seq.html
@@ -311,21 +311,21 @@ In [4]: primitive = load_primitive('keras.Sequential.DenseSeq2Seq',
 
 In [5]: primitive.fit()
 Epoch 1/5
-1/1 [==============================] - ETA: 0s - loss: 1.3348 - mse: 1.33481/1 [==============================] - 0s 432us/step - loss: 1.3348 - mse: 1.3348
+1/1 [==============================] - ETA: 0s - loss: 1.8973 - mse: 1.89731/1 [==============================] - 0s 319ms/step - loss: 1.8973 - mse: 1.8973
 Epoch 2/5
-1/1 [==============================] - ETA: 0s - loss: 1.1153 - mse: 1.11531/1 [==============================] - 0s 286us/step - loss: 1.1153 - mse: 1.1153
+1/1 [==============================] - ETA: 0s - loss: 1.4763 - mse: 1.47631/1 [==============================] - 0s 1ms/step - loss: 1.4763 - mse: 1.4763
 Epoch 3/5
-1/1 [==============================] - ETA: 0s - loss: 1.2171 - mse: 1.21711/1 [==============================] - 0s 247us/step - loss: 1.2171 - mse: 1.2171
+1/1 [==============================] - ETA: 0s - loss: 1.6879 - mse: 1.68791/1 [==============================] - 0s 1ms/step - loss: 1.6879 - mse: 1.6879
 Epoch 4/5
-1/1 [==============================] - ETA: 0s - loss: 1.0716 - mse: 1.07161/1 [==============================] - 0s 244us/step - loss: 1.0716 - mse: 1.0716
+1/1 [==============================] - ETA: 0s - loss: 1.3380 - mse: 1.33801/1 [==============================] - 0s 944us/step - loss: 1.3380 - mse: 1.3380
 Epoch 5/5
-1/1 [==============================] - ETA: 0s - loss: 0.9132 - mse: 0.91321/1 [==============================] - 0s 242us/step - loss: 0.9132 - mse: 0.9132
+1/1 [==============================] - ETA: 0s - loss: 1.3049 - mse: 1.30491/1 [==============================] - 0s 909us/step - loss: 1.3049 - mse: 1.3049
 
 In [6]: pred = primitive.produce(X=X)
-1/1 [==============================] - ETA: 0s1/1 [==============================] - 0s 220us/step
+1/1 [==============================] - ETA: 0s1/1 [==============================] - 0s 45ms/step
 
 In [7]: pred.mean()
-Out[7]: 0.06490848269444181</pre>
+Out[7]: 0.018083439494222427</pre>
 </section>
 
 
