--- a/user_guides/primitives_pipelines/primitives/LSTMSeq2Seq.html
+++ b/user_guides/primitives_pipelines/primitives/LSTMSeq2Seq.html
@@ -319,21 +319,21 @@ In [4]: primitive = load_primitive('keras.Sequential.LSTMSeq2Seq',
 
 In [5]: primitive.fit()
 Epoch 1/5
-1/1 [==============================] - ETA: 0s - loss: 0.9672 - mse: 0.96721/1 [==============================] - 0s 433us/step - loss: 0.9672 - mse: 0.9672
+1/1 [==============================] - ETA: 0s - loss: 0.8837 - mse: 0.88371/1 [==============================] - 2s 2s/step - loss: 0.8837 - mse: 0.8837
 Epoch 2/5
-1/1 [==============================] - ETA: 0s - loss: 0.7310 - mse: 0.73101/1 [==============================] - 0s 368us/step - loss: 0.7310 - mse: 0.7310
+1/1 [==============================] - ETA: 0s - loss: 0.6464 - mse: 0.64641/1 [==============================] - 0s 26ms/step - loss: 0.6464 - mse: 0.6464
 Epoch 3/5
-1/1 [==============================] - ETA: 0s - loss: 0.5204 - mse: 0.52041/1 [==============================] - 0s 419us/step - loss: 0.5204 - mse: 0.5204
+1/1 [==============================] - ETA: 0s - loss: 0.4469 - mse: 0.44691/1 [==============================] - 0s 42ms/step - loss: 0.4469 - mse: 0.4469
 Epoch 4/5
-1/1 [==============================] - ETA: 0s - loss: 0.3306 - mse: 0.33061/1 [==============================] - 0s 381us/step - loss: 0.3306 - mse: 0.3306
+1/1 [==============================] - ETA: 0s - loss: 0.2768 - mse: 0.27681/1 [==============================] - 0s 24ms/step - loss: 0.2768 - mse: 0.2768
 Epoch 5/5
-1/1 [==============================] - ETA: 0s - loss: 0.1681 - mse: 0.16811/1 [==============================] - 0s 353us/step - loss: 0.1681 - mse: 0.1681
+1/1 [==============================] - ETA: 0s - loss: 0.1374 - mse: 0.13741/1 [==============================] - 0s 23ms/step - loss: 0.1374 - mse: 0.1374
 
 In [6]: pred = primitive.produce(X=X)
-1/1 [==============================] - ETA: 0s1/1 [==============================] - 0s 223us/step
+1/1 [==============================] - ETA: 0s1/1 [==============================] - 1s 524ms/step
 
 In [7]: pred.mean()
-Out[7]: 0.8056962168302588</pre>
+Out[7]: 0.830993198472685</pre>
 </section>
 
 
