--- a/user_guides/primitives_pipelines/primitives/DenseSeq2Seq.html
+++ b/user_guides/primitives_pipelines/primitives/DenseSeq2Seq.html
@@ -311,21 +311,21 @@ In [4]: primitive = load_primitive('keras.Sequential.DenseSeq2Seq',
 
 In [5]: primitive.fit()
 Epoch 1/5
-1/1 [==============================] - ETA: 0s - loss: 1.0589 - mse: 1.05891/1 [==============================] - 0s 338ms/step - loss: 1.0589 - mse: 1.0589
+1/1 [==============================] - ETA: 0s - loss: 1.4827 - mse: 1.48271/1 [==============================] - 0s 317ms/step - loss: 1.4827 - mse: 1.4827
 Epoch 2/5
-1/1 [==============================] - ETA: 0s - loss: 1.2700 - mse: 1.27001/1 [==============================] - 0s 1ms/step - loss: 1.2700 - mse: 1.2700
+1/1 [==============================] - ETA: 0s - loss: 1.4955 - mse: 1.49551/1 [==============================] - 0s 1ms/step - loss: 1.4955 - mse: 1.4955
 Epoch 3/5
-1/1 [==============================] - ETA: 0s - loss: 1.1234 - mse: 1.12341/1 [==============================] - 0s 1ms/step - loss: 1.1234 - mse: 1.1234
+1/1 [==============================] - ETA: 0s - loss: 1.5408 - mse: 1.54081/1 [==============================] - 0s 993us/step - loss: 1.5408 - mse: 1.5408
 Epoch 4/5
-1/1 [==============================] - ETA: 0s - loss: 1.0387 - mse: 1.03871/1 [==============================] - 0s 1ms/step - loss: 1.0387 - mse: 1.0387
+1/1 [==============================] - ETA: 0s - loss: 1.3956 - mse: 1.39561/1 [==============================] - 0s 940us/step - loss: 1.3956 - mse: 1.3956
 Epoch 5/5
-1/1 [==============================] - ETA: 0s - loss: 1.1370 - mse: 1.13701/1 [==============================] - 0s 1ms/step - loss: 1.1370 - mse: 1.1370
+1/1 [==============================] - ETA: 0s - loss: 1.3005 - mse: 1.30051/1 [==============================] - 0s 882us/step - loss: 1.3005 - mse: 1.3005
 
 In [6]: pred = primitive.produce(X=X)
-1/1 [==============================] - ETA: 0s1/1 [==============================] - 0s 46ms/step
+1/1 [==============================] - ETA: 0s1/1 [==============================] - 0s 44ms/step
 
 In [7]: pred.mean()
-Out[7]: 0.027944423150773327</pre>
+Out[7]: 0.09805301574317324</pre>
 </section>
 
 
