deploy: c22c37a3abf48a6030bd0dd8560e935ef0410717

--- a/user_guides/primitives_pipelines/primitives/DenseSeq2Seq.html
+++ b/user_guides/primitives_pipelines/primitives/DenseSeq2Seq.html
@@ -311,21 +311,21 @@ In [4]: primitive = load_primitive('keras.Sequential.DenseSeq2Seq',
 
 In [5]: primitive.fit()
 Epoch 1/5
-1/1 [==============================] - ETA: 0s - loss: 1.2090 - mse: 1.20891/1 [==============================] - 1s 512ms/step - loss: 1.2090 - mse: 1.2089
+1/1 [==============================] - ETA: 0s - loss: 1.1933 - mse: 1.19331/1 [==============================] - 0s 316ms/step - loss: 1.1933 - mse: 1.1933
 Epoch 2/5
-1/1 [==============================] - ETA: 0s - loss: 1.4035 - mse: 1.40351/1 [==============================] - 0s 2ms/step - loss: 1.4035 - mse: 1.4035
+1/1 [==============================] - ETA: 0s - loss: 1.3318 - mse: 1.33181/1 [==============================] - 0s 1ms/step - loss: 1.3318 - mse: 1.3318
 Epoch 3/5
-1/1 [==============================] - ETA: 0s - loss: 1.0237 - mse: 1.02371/1 [==============================] - 0s 1ms/step - loss: 1.0237 - mse: 1.0237
+1/1 [==============================] - ETA: 0s - loss: 1.0910 - mse: 1.09101/1 [==============================] - 0s 1ms/step - loss: 1.0910 - mse: 1.0910
 Epoch 4/5
-1/1 [==============================] - ETA: 0s - loss: 0.9881 - mse: 0.98811/1 [==============================] - 0s 1ms/step - loss: 0.9881 - mse: 0.9881
+1/1 [==============================] - ETA: 0s - loss: 1.1691 - mse: 1.16911/1 [==============================] - 0s 989us/step - loss: 1.1691 - mse: 1.1691
 Epoch 5/5
-1/1 [==============================] - ETA: 0s - loss: 1.0625 - mse: 1.06251/1 [==============================] - 0s 1ms/step - loss: 1.0625 - mse: 1.0625
+1/1 [==============================] - ETA: 0s - loss: 1.2804 - mse: 1.28041/1 [==============================] - 0s 926us/step - loss: 1.2804 - mse: 1.2804
 
 In [6]: pred = primitive.produce(X=X)
-1/1 [==============================] - ETA: 0s1/1 [==============================] - 0s 68ms/step
+1/1 [==============================] - ETA: 0s1/1 [==============================] - 0s 44ms/step
 
 In [7]: pred.mean()
-Out[7]: 0.045977128687637425</pre>
+Out[7]: 0.009758747462541444</pre>
 </section>
 
 
